--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -138,15 +138,16 @@
       <button [disabled]="formContato.invalid" type="submit"> Enviar </button>   <!-- esse botao vai esta desabilitado se tiver algum campo invalido no formulario-->
     </form>                                        <!-- usei lá encima o enviarformulario que lincou com esse submit-->
     <address>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.206183040898!2d-49.921779385904124!3d-16.816124488423295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935e23a424ef4c89%3A0xf11f4acca7e52fbf!2sBarbearia%20Do%20Netto!5e0!3m2!1spt-BR!2sbr!4v1681151053517!5m2!1spt-BR!2sbr"
-        width="500"
-        height="200"
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7638.149646802346!2d-49.923045660823135!3d-16.822643766148886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935e23f0e1cd43e1%3A0xa7664fd356b58ed7!2sImperial%20barbearia%20-cabelo-degrade!5e0!3m2!1spt-BR!2sbr!4v1681439112571!5m2!1spt-BR!2sbr"
+        width="550"
+        height="380"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
+        
       ></iframe>
-      <p>Rua Tolendal Bittencourt, qd 16, lt 2a,
+      <p>Rua Tolendal Bittencourt, qd 16, lt 1a,
         Major Sinfronio.
        </p>
     </address>
