--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -41,11 +41,14 @@
 
   
   
+
+
+
   .contact__title {
       font-size: 35px;
       color: var(--gray);
       font-weight: 700;
-      padding: 8px 0;
+      padding: 10px 0 0 10px;
     }
     
     .contact-form {
@@ -54,7 +57,11 @@
       flex-direction:column ;
       row-gap: 20px;
       margin-bottom: 50px;
-      min-width: 300px;
+      margin-right: 20px;
+      padding: 10px;
+      min-width: 200px;
+      max-width: 700px;
+      
     }
     
     .contact-form button {
