--- a/src/app/platinado/platinado.component.css
+++ b/src/app/platinado/platinado.component.css
@@ -22,7 +22,7 @@
   .main-header__menu ul {
     display: flex;
     justify-content: flex-end;
-  
+
   }
   .main-header__menu a {
     padding: 8.8px 8px 8px 8px;
@@ -71,6 +71,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100%;
     row-gap: 10px;
     text-decoration: none;
 }
@@ -85,7 +86,7 @@
 .product-item__name {
     font-size: 24px;
     color: var(--blue);
-    
+
 }
 .product-item__price {
     color: var(--orange);
